[gd_scene load_steps=13 format=3 uid="uid://u7h5tmebd46t"]

[ext_resource type="Script" uid="uid://crmvcldx6fj75" path="res://scenes/main/main.gd" id="1_b1x3f"]
[ext_resource type="PackedScene" uid="uid://dm4pv7j8huu57" path="res://entities/cloud/cloud.tscn" id="2_a8run"]
[ext_resource type="PackedScene" uid="uid://clcjl5fhiyanm" path="res://entities/health_token/health_token.tscn" id="3_a8run"]
[ext_resource type="Script" uid="uid://cddiagb5fp87p" path="res://addons/touch_screen_joystick/touch_screen_joystick.gd" id="3_ouso4"]
[ext_resource type="PackedScene" uid="uid://rnt6rijcegvj" path="res://entities/player/player.tscn" id="4_blune"]
[ext_resource type="Script" uid="uid://d12s81ohsulyg" path="res://entities/player/despawn.gd" id="5_th5th"]
[ext_resource type="Script" uid="uid://4l5bhdvpd257" path="res://entities/player/spawner.gd" id="6_7smn1"]
[ext_resource type="PackedScene" uid="uid://cjg6hmcbh7tco" path="res://entities/tree/tree.tscn" id="7_raeie"]
[ext_resource type="PackedScene" uid="uid://b7bhhrpqdf0u6" path="res://entities/rock/rock.tscn" id="8_hxu8e"]
[ext_resource type="AudioStream" uid="uid://bh11mn3b6c8fk" path="res://assets/music/music_orlamusic_Happy+003.mp3" id="10_a8run"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(640, 192)

[sub_resource type="Curve2D" id="Curve2D_85g3d"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -140, 1558.56, 0, 0, 0, 0, -138, 141.306)
}
point_count = 2

[node name="Main" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_b1x3f")
cloud_scene = ExtResource("2_a8run")
health_scene = ExtResource("3_a8run")

[node name="Background" type="CanvasLayer" parent="."]
layer = -99

[node name="ColorRect" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UI" type="CanvasLayer" parent="."]
layer = 100

[node name="Score" type="Label" parent="UI"]
unique_name_in_owner = true
offset_right = 113.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Score: 0"

[node name="Health" type="HBoxContainer" parent="UI"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_right = -5.0
offset_bottom = 40.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TouchScreenJoystick" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 224.0
offset_top = 512.0
offset_right = 264.0
offset_bottom = 552.0
script = ExtResource("3_ouso4")
base_radius = 95.0
knob_radius = 40.0
color = Color(0.218767, 0.438013, 0.718211, 1)
use_input_actions = true
action_left = &"move_left"
action_right = &"move_right"
action_up = &"move_up"
action_down = &"move_down"
metadata/_custom_type_script = "uid://cddiagb5fp87p"

[node name="Player" parent="." instance=ExtResource("4_blune")]
unique_name_in_owner = true
position = Vector2(240, 168)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, 152)

[node name="Despawn" type="Area2D" parent="Player"]
position = Vector2(0, -296)
collision_layer = 0
collision_mask = 13
script = ExtResource("5_th5th")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player/Despawn"]
polygon = PackedVector2Array(-489, 96, -490, 984, -624, 984, -624, -128, 656, -128, 656, 965, 515, 965, 515, 96)

[node name="Spawner" type="Area2D" parent="Player"]
position = Vector2(0, 584)
script = ExtResource("6_7smn1")
tree_scene = ExtResource("7_raeie")
rock_scene = ExtResource("8_hxu8e")

[node name="SpawnArea" type="CollisionShape2D" parent="Player/Spawner"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_1bvp3")
debug_color = Color(0.911777, 0.274269, 0.285739, 0.42)

[node name="CloudPath" type="Path2D" parent="Player"]
position = Vector2(-240, -160.586)
scale = Vector2(1, 0.987826)
curve = SubResource("Curve2D_85g3d")

[node name="CloudPathLocation" type="PathFollow2D" parent="Player/CloudPath"]
unique_name_in_owner = true
position = Vector2(-140, 1558.56)
rotation = -1.5693852

[node name="Initial Obstacles" type="Node2D" parent="."]

[node name="Tree" parent="Initial Obstacles" instance=ExtResource("7_raeie")]
position = Vector2(96, 368)

[node name="Tree2" parent="Initial Obstacles" instance=ExtResource("7_raeie")]
position = Vector2(352, 216)

[node name="Tree3" parent="Initial Obstacles" instance=ExtResource("7_raeie")]
position = Vector2(391, 432)

[node name="Tree4" parent="Initial Obstacles" instance=ExtResource("7_raeie")]
position = Vector2(80, 96)

[node name="Tree5" parent="Initial Obstacles" instance=ExtResource("7_raeie")]
position = Vector2(32, 464)

[node name="Tree6" parent="Initial Obstacles" instance=ExtResource("7_raeie")]
position = Vector2(80, 240)

[node name="Rock" parent="Initial Obstacles" instance=ExtResource("8_hxu8e")]
position = Vector2(400, 336)

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
stream = ExtResource("10_a8run")
volume_db = -10.0
autoplay = true
parameters/looping = true

[node name="TreeTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="CloudTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="player_hit" from="Player" to="." method="_on_player_player_hit"]
[connection signal="area_entered" from="Player/Despawn" to="Player/Despawn" method="_on_area_entered"]
[connection signal="obstacle_removed" from="Player/Despawn" to="Player/Spawner" method="_on_despawn_obstacle_removed"]
[connection signal="timeout" from="TreeTimer" to="Player/Spawner" method="_on_tree_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="CloudTimer" to="." method="_on_cloud_timer_timeout"]
